<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_launch"
        android:icon="@drawable/ic_two_tone_play_arrow"
        android:title="@string/module_launch" />
    <item
        android:id="@+id/menu_download_updates"
        android:icon="@drawable/ic_two_tone_cloud_download"
        android:title="@string/module_download_updates" />
    <item
        android:id="@+id/menu_support"
        android:icon="@drawable/ic_two_tone_help"
        android:title="@string/module_support" />
    <item
        android:id="@+id/menu_app_store"
        android:icon="@drawable/ic_two_tone_dashboard"
        android:title="@string/modules_app_store" />
    <item
        android:id="@+id/menu_app_info"
        android:icon="@drawable/ic_two_tone_info"
        android:title="@string/module_app_info" />
    <item
        android:id="@+id/menu_uninstall"
        android:icon="@drawable/ic_two_tone_delete"
        android:title="@string/module_uninstall" />

</menu>