<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_black_list"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/nav_title_black_list" />
        <item
            android:id="@+id/nav_compat_list"
            android:icon="@drawable/ic_two_tone_local_hospital"
            android:title="@string/nav_title_compat_list" />
    </group>
    <group
        android:id="@+id/log_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_4"
            android:icon="@drawable/ic_nav_logs"
            android:title="@string/nav_item_logs" />
        <item
            android:id="@+id/drawer_item_errlog"
            android:icon="@drawable/ic_nav_logs"
            android:title="@string/nav_item_logs_err" />
    </group>
    <group
        android:id="@+id/option_items"
        android:checkableBehavior="all">
        <item
            android:id="@+id/drawer_item_5"
            android:icon="@drawable/ic_two_tone_settings_applications"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/drawer_item_6"
            android:icon="@drawable/ic_two_tone_help"
            android:title="@string/nav_item_support" />
        <item
            android:id="@+id/drawer_item_7"
            android:icon="@drawable/ic_two_tone_info"
            android:title="@string/nav_item_about" />
    </group>
</menu>