<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:textColorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownload"
            style="@style/Widget.Button.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_download" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/Widget.Button.Flat.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownloadCancel"
            style="@style/Widget.Button.Flat.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_cancel"
            android:visibility="gone"
            tools:ignore="ButtonOrder" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRemove"
            style="@style/Widget.Button.Flat.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_remove"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInstall"
            style="@style/Widget.Button.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_install"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</merge>